# python-especialista

./: .gitignore  LICENSE
.github/workflows/: publish.yml
blog/: _quarto.yml  about.qmd  index.qmd  posts.qmd
blog/.quarto/idx/: about.qmd.json  index.qmd.json  posts.qmd.json
blog/.quarto/project-cache/: deno-kv-file
blog/.quarto/xref/: 78fb6b95  INDEX  b8e9e873  c519ffb1  dd1f5d47
blog/_site/: about.html  listings.json  posts.html  search.json
blog/_site/posts/001-projeto-python/: index.html
blog/_site/posts/002-docker-python/: index.html
blog/_site/site_libs/bootstrap/: bootstrap-0d7ab00e18bd96fcdbfa849d61c89f5e.min.css  bootstrap-2620b95ddcb60e4109973d92d3b0f50c.min.css  bootstrap-2af3ddae65c349795b97113f27b68e8f.min.css  (+10 more)
blog/_templates/: post.qmd
blog/docs/: about.html  index.html  listings.json  posts.html  robots.txt  search.json  sitemap.xml
blog/posts/001-projeto-python/: index.qmd
blog/posts/002-docker-python/: index.qmd
blog/posts/003-docker-container/: index.qmd
blog/templates/: post.qmd
labs/lab-ambiente-python/: main.py  pyproject.toml
labs/lab-bike-demand-mlops/: .env.example  .gitignore  README.md  main.py  pyproject.toml
labs/lab-bike-demand-mlops/src/: config.py
labs/lab-bike-demand-mlops/src/common/: database.py
labs/lab-bike-demand-mlops/tests/: test_config.py  test_database_connection.py
labs/lab-dashboard-cycling/: .dockerignore  Dockerfile  main.py  pyproject.toml  weather.py  weather_snapshot.csv
labs/lab-docker-python/: .dockerignore  Dockerfile  main.py  pyproject.toml
(+7 files in other folders)
